--- a/views/index.html
+++ b/views/index.html
@@ -72,13 +72,10 @@
                         </a>
                         <ul class="nav nav-second-level">
                             <li>
-                                <a class="J_menuItem" href="graph_echarts.html">销售记录</a>
+                                <a class="J_menuItem" href="/erp/stock">库存记录</a>
                             </li>
                             <li>
-                                <a class="J_menuItem" href="graph_flot.html">库存记录</a>
-                            </li>
-                            <li>
-                                <a class="J_menuItem" href="graph_morris.html">Morris.js</a>
+                                <a class="J_menuItem" href="/erp">销售记录</a>
                             </li>
                         </ul>
                     </li>
